se saco la palabra contacto

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
       <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </nav>
-<h1 class="text-warning">Club Atlético Boca Juniors - Contactanos
+<h1 class="text-warning">Club Atlético Boca Juniors
     ¿Querés más información?</h1>
     <h2 class="text-warning">Escuchamos sus preguntas, comentarios y sugerencias. Seleccione el área que quisiera contactar.</h2>
 
